--- a/AboutMe/app/src/main/res/layout/activity_main.xml
+++ b/AboutMe/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,9 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textStyle="normal"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:background="@color/colorAccent"
+        android:textColor="@color/white" />
 
     <ImageView
         android:id="@+id/star_image"
